# synology-dedup-photos

./: Cargo.toml  README.md
src/: main.rs  nas.rs
